terraform/main.tf
resource "aws_security_group" "devops_sg" {
    name = "devops_sg"
    ingress {from_port=22 to_port=22 protocol="tcp" cidr_blocks=["0.0.0.0/0"]}
    ingress {from_port=8080 to_port=80 protocol="tcp" cidr_blocks=["0.0.0.0/0"]}
    ingress {from_port=30000 to_port=32767 protocol="tcp" cidr_blocks=["0.0.0.0/0"]}
}   
resource "aws_instance" "devops_ec2" {
    ami = var.ami_id
    instance_type = var.instance_type
    key_name = var.key_name
    vpc_security_group_ids =  [aws_security_group.devops_sg.id]
    tags = {Name = "ai-learning-devops"}
}
